Update .travis.yml Fix for Travis-CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 before_script:
   - npm install -g grunt
+  - npm install -g bower
+  - npm install -g karma
 
-script: grunt
+script: grunt test --force
