--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
+language: node_js
+node_js:
+  - "0.11"
+  - "0.10"
+  - "0.8"
+  - "0.6"
+
 before_script:
-  - npm install -g grunt
+  - npm install -g grunt-cli
+  - npm install
   - npm install -g bower
   - npm install -g karma
 
