--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ node_js:
 
 before_script:
   - npm install -g grunt-cli
-  - npm install
   - npm install -g bower
   - npm install -g karma
 
-script: grunt test --force
+script: grunt test
